<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.amatanat.arrowmusicapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/genres"
            android:text="@string/genres"
            android:background="@color/colorGray"
            style="@style/myButtonStyle" />

        <Button
            android:id ="@+id/mood"
            style="@style/myButtonStyle"
            android:background="@color/colorTeal"
            android:text="@string/mood" />

        <Button
            android:id ="@+id/popular_songs"
            style="@style/myButtonStyle"
            android:background="@color/colorPurple"
            android:text="@string/popular_songs" />

        <Button
            android:id ="@+id/artists"
            style="@style/myButtonStyle"
            android:background="@color/colorPink"
            android:text="@string/artists"/>

        <Button
            android:id ="@+id/new_releases"
            style="@style/myButtonStyle"
            android:background="@color/colorLightBlue"
            android:text="@string/new_releases"/>

    </LinearLayout>

</ScrollView>